<resources>
    <string name="app_name">Lab1Activities</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Registrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_user">Usuario</string>
    <string name="action_log_in">Ingresar</string>
    <string name="action_cancel">Cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">messages_header</string>
    <string name="signature_title">signature_title</string>
    <string name="reply_title">reply_title</string>
    <string name="sync_header">sync_header</string>
</resources>